<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/manageSubViewActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martin.studentorganizer.ModuleSubViewActivity"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_green_light"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@android:color/darker_gray"/>

    <Button
        android:text="@string/add_module"
        android:id="@+id/add_module_button"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
    android:text="@string/remove_module"
    android:id="@+id/remove_module_button"
    android:layout_marginTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"/>

    <Button
        android:text="@string/view_modules"
        android:id="@+id/view_modules_button"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>
